--- a/src/MauiApp/ExEtc.Mobile/Shared/NavMenu.razor
+++ b/src/MauiApp/ExEtc.Mobile/Shared/NavMenu.razor
@@ -15,13 +15,13 @@
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="counter">
-				<span class="oi oi-plus" aria-hidden="true"></span> Counter
+			<NavLink class="nav-link" href="newworkout">
+				<span class="oi oi-plus" aria-hidden="true"></span> New Workout
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="fetchdata">
-				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+			<NavLink class="nav-link" href="workouts">
+				<span class="oi oi-list-rich" aria-hidden="true"></span> Workouts
 			</NavLink>
 		</div>
 	</nav>
