--- a/src/MauiApp/ExEtc.Mobile/Pages/NewWorkout.razor
+++ b/src/MauiApp/ExEtc.Mobile/Pages/NewWorkout.razor
@@ -1,6 +1,8 @@
 ﻿@page "/newworkout"
+@inject INewWorkoutService NewWorkoutService
 @using ExEtc.Mobile.Components
 @using ExEtc.Mobile.Data
+@using ExEtc.Mobile.Services
 
 <h3>Create New Workout</h3>
 <form>
@@ -12,14 +14,13 @@
         <label>Category</label>
         <input type="text"/>
     </div>
-    <button @onclick="AddExercise">Add New Exercise</button>
+    <button @onclick="NewExercise">Add New Exercise</button>
 </form>
 
-    @code {
+@code {
     public List<ExerciseDto> Exercises { get; set; }
-    public void AddExercise()
+    public void NewExercise()
     {
-        var component = new NewExerciseComponent();
-        
+        NewWorkoutService.NewExercise();
     }
 }
