--- a/src/MauiApp/ExEtc.Mobile/Pages/NewWorkout.razor
+++ b/src/MauiApp/ExEtc.Mobile/Pages/NewWorkout.razor
@@ -16,10 +16,7 @@
     </div>
     @for(int i=0; i<ExerciseCounter; i++)
     {
-        <div>
-            <label>Type</label>
-            <input type="text"/>
-        </div>
+        <NewExerciseComponent/>
     }
     
     <div 
@@ -32,5 +29,6 @@
     public void NewExercise()
     {
         ExerciseCounter++;
+        StateHasChanged();
     }
 }
