replace counter implementation with service (to allow removing specifically added new exercises)

--- a/src/MauiApp/ExEtc.Mobile/Components/NewExerciseComponent.razor
+++ b/src/MauiApp/ExEtc.Mobile/Components/NewExerciseComponent.razor
@@ -10,7 +10,9 @@
     <label>Reps</label>
     <input type="text" />
 </div>
-<button @onclick="RemoveComponent">Remove</button>
+<div
+    class="px-4 py-4"
+    @onclick="RemoveComponent">Remove</div>
 
 @code {
     [Parameter]
