--- a/src/MauiApp/ExEtc.Mobile/Pages/NewWorkout.razor
+++ b/src/MauiApp/ExEtc.Mobile/Pages/NewWorkout.razor
@@ -14,7 +14,7 @@
         <label>Category</label>
         <input type="text"/>
     </div>
-    @for(int i=0; i<ExerciseCounter; i++)
+    @for(int i=0; i<ExerciseList.Count; i++)
     {
         <NewExerciseComponent/>
     }
